C/DEV3/interros/cours/annees_precedentes/exam-2017-01-12/code11_results.txt
Résultat de la compilation: 
code11.cpp:5:5: error: ‘B’ does not name a type
     B b;
     ^
(ERREUR: la compilation a échouée!)
